# neural-inverse-planning

./: .gitignore  README.md  copy_of_inv_plan_from_scratch.py  demo.ipynb  neural_inverse_planning_tutorial.ipynb  pyproject.toml
inverse_planning/: __init__.py  data.py  inference.py  memo_backend.py  planning.py  rnn_models.py  simulate.py  task.py  training.py  visualize.py
latex/: README.md  main.tex  refs.bib
scripts/: __init__.py  compile_latex.py  demo_workflow.py  generate_dataset.py  train_goal_belief_rnn.py  train_goal_conditioned_policy.py
