[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs6208-inverse-planning"
version = "0.1.0"
description = "Reusable inverse planning project scaffold for the CS6208 gridworld task."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
train = [
  "torch>=2.2",
]
memo = [
  "memo",
  "jax",
  "jaxlib",
]

[tool.setuptools.packages.find]
include = ["inverse_planning*"]
