[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs6208-inverse-planning"
version = "0.1.0"
description = "Memo-backed gridworld inverse-planning experiments with exact goal inference, visualization, dataset generation, and RNN baselines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
  "inverse-planning",
  "theory-of-mind",
  "gridworld",
  "bayesian-inference",
  "jax",
  "pytorch",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
]

[project.urls]
Repository = "https://github.com/thanhquangtran/cs6208"

[project.scripts]
inverse-planning-demo = "scripts.demo_workflow:main"
inverse-planning-generate-dataset = "scripts.generate_dataset:main"
inverse-planning-train-goal-belief-rnn = "scripts.train_goal_belief_rnn:main"
inverse-planning-train-goal-conditioned-policy = "scripts.train_goal_conditioned_policy:main"
inverse-planning-compile-latex = "scripts.compile_latex:main"

[project.optional-dependencies]
train = [
  "torch>=2.2",
]
memo = [
  "memo-lang",
  "jax>=0.4",
  "jaxlib>=0.4",
]
notebook = [
  "matplotlib>=3.8",
  "ipykernel>=6.29",
  "ipython>=8.18",
]
latex = [
  "b8tex>=0.2.1",
]
dev = [
  "memo-lang",
  "jax>=0.4",
  "jaxlib>=0.4",
  "torch>=2.2",
  "matplotlib>=3.8",
  "ipykernel>=6.29",
  "ipython>=8.18",
  "b8tex>=0.2.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["inverse_planning*", "scripts*"]
